# node-t-checker

./: .coveragerc  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
tests/: mocks.py  test_formatter.py  test_parser.py  test_types.py  test_validator.py
validator/: exceptions.py  formatter.py  github.py  main.py  parser.py  types.py  validator.py
