[tool.poetry]
name = "validator"
version = "0.1.0"
description = ""
authors = ["Javier Aguirre <javi@tnpr.io>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
PyGithub = "^1.51"
pytest-mock = "^3.1.0"
pytest-cov = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
